[package]
name = "bench_rusty_hausdorff"
version = "0.1.0"
authors = ["Tyler Reddy <tyler.je.reddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timeit = "0.1.2"
rusty_hausdorff = "0.1.0"
ndarray-npy = "0.8"
ndarray = "0.15.2"
